# flashsentry

./: .gitattributes  .gitignore  AI_Conversation.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
cmake/: cmake_uninstall.cmake.in
docs/: DIAGNOSTICS.md  MIGRATION-FROM-FLASHSENTRY.md  PR_TRIAGE_2026-05-28.md  README.md  SCREENSHOTS.md  USER_GUIDE.md  VERIFICATION.md  WINDOWS.md
docs/images/: README.md
include/: AboutPage.h  AlertsPage.h  AllowBlockListPage.h  AppDiagnostics.h  AppNavigation.h  AppPaths.h  AuditLog.h  AutostartManager.h  BadUsbAnalyzer.h  BadUsbBaselineStore.h  BadUsbWidget.h  BlockedDriveStore.h  ContentPageShell.h  CrashReporter.h  DatabaseManager.h  DeviceCard.h  DeviceDriveUtil.h  DeviceHistoryPage.h  DeviceIdUtil.h  DeviceMonitor.h  DeviceTimelineLog.h  DeviceTrustCoordinator.h  DeviceVerificationPlanner.h  DeviceWhitelistService.h  EventDetailDialog.h  GpgUtil.h  HashCheckpoint.h  HashOptionsDialog.h  HashWorker.h  HidDeviceMonitor.h  IsoBaselineService.h  IsoCatalog.h  IsoCatalogInternal.h  IsoCatalogManifest.h  IsoChecksum.h  IsoHttpClient.h  IsoQuickFingerprint.h  IsoScanRules.h  IsoVerifier.h  IsoVerifierWidget.h  (+42 more)
include/policy/: PolicyAudit.h  PolicyBlobCodec.h  PolicyDaemonClient.h  PolicyDaemonLauncher.h  PolicyGateway.h  PolicyInProcessGateway.h  PolicyPaths.h  PolicyServiceLocator.h  PolicySnapshot.h  PolicySocketAuth.h  PolicyStoreEngine.h
packaging/: 99-flashsentry.rules  99-flashspartan.rules  INSTALL.md  PKGBUILD  build-package.sh  config.json.default  flashsentry.desktop  flashsentry.install  flashsentry.service  flashspartan.desktop  flashspartan.install  flashspartan.service  install-local.sh  org.flashsentry.policy  org.flashsentry.policy.in  org.flashspartan.policy  org.flashspartan.policy.in  sync-pkgver.sh  update-release-checksums.sh
packaging/iso-catalog.d/: README.md  example-hint-only.json.example
packaging/windows/: CMakeLists.txt  FlashSentry.rc.in  FlashSpartan.rc.in  INSTALLER.md  custom-nsis-components.md
packaging/windows/scripts/: download-usbpcap.ps1  ensure-ci-gpg.ps1  ensure-ci-openssl.ps1
packaging/windows/wix/: Bundle.wxs.in  License.rtf  Product.wxs.in  Variables.wxi.in
resources/: resources.qrc
resources/iso-catalog/: catalog-signing.pub  embedded-manifest.json  embedded-manifest.json.asc  embedded-manifest.json.sha256
resources/styles/: dark.qss  light.qss
src/: AboutPage.cpp  AlertsPage.cpp  AllowBlockListPage.cpp  AppDiagnostics.cpp  AppPaths.cpp  AuditLog.cpp  AutostartManager.cpp  BadUsbAnalyzer.cpp  BadUsbBaselineStore.cpp  BadUsbWidget.cpp  BlockedDriveStore.cpp  ContentPageShell.cpp  CrashReporter.cpp  DatabaseManager.cpp  DeviceCard.cpp  DeviceDriveUtil.cpp  DeviceHistoryPage.cpp  DeviceIdUtil.cpp  DeviceMonitor.cpp  DeviceTimelineLog.cpp  DeviceTrustCoordinator.cpp  DeviceVerificationPlanner.cpp  DeviceWhitelistService.cpp  EventDetailDialog.cpp  HashCheckpoint.cpp  HashOptionsDialog.cpp  HashWorker.cpp  HidDeviceMonitor.cpp  HidDeviceMonitor_win.cpp  IsoBaselineService.cpp  IsoCatalog.cpp  IsoCatalogManifest.cpp  IsoChecksum.cpp  IsoHttpClient.cpp  IsoQuickFingerprint.cpp  IsoScanRules.cpp  IsoVerifier.cpp  IsoVerifierWidget.cpp  IsoVerifierWorker.cpp  IsoVerifyCache.cpp  (+42 more)
src/iso_catalog/: IsoCatalogBuilders.cpp  IsoCatalogMatch.cpp  IsoCatalogUtil.cpp
src/policy/: PolicyAudit.cpp  PolicyBlobCodec.cpp  PolicyDaemonClient.cpp  PolicyDaemonLauncher.cpp  PolicyGateway.cpp  PolicyInProcessGateway.cpp  PolicyPaths.cpp  PolicyServiceLocator.cpp  PolicySocketAuth.cpp  PolicyStoreEngine.cpp
tests/: CMakeLists.txt  GpgTestUtil.h  WindowsCiTestUtil.h  test_autostart.cpp  test_badusb_analyzer.cpp  test_badusb_baseline.cpp  test_database_manager.cpp  test_device_drive_util.cpp  test_device_id_util.cpp  test_device_trust_coordinator.cpp  test_device_verification_planner.cpp  test_device_whitelist_service.cpp  test_hash_worker.cpp  test_iso_baseline_service.cpp  test_iso_catalog.cpp  test_iso_checksum.cpp  test_iso_http_mock.cpp  test_iso_scan_rules.cpp  test_iso_verify_integration.cpp  test_iso_verify_publisher_mock.cpp  test_main_window_iso_flow.cpp  test_manifest_service.cpp  test_manifest_worker.cpp  test_merkle.cpp  test_mount_dbus_util.cpp  test_mount_options.cpp  test_policy_auth.cpp  test_policy_daemon.cpp  test_raw_device_hash.cpp  test_types.cpp  test_udisks2_integration.cpp  test_verify_report.cpp
tests/fixtures/offline-bad/: zz-offline-fixture.iso.sha256
tests/fixtures/offline-good/: SHA256SUMS  zz-offline-fixture.iso  zz-offline-fixture.iso.sha256
tests/fixtures/publisher-mock/: SHA256SUMS  SHA256SUMS.sig  catalog-dropin.json  mock-distro-1.0.0-x86_64.iso
tests/fixtures/ventoy-scan/ventoy/: decoy-in-ventoy-folder.iso  ventoy.json
tools/: gen-catalog-signing-key.sh  sign-embedded-manifest.sh  validate-iso-manifest.py
